--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <title>CSS Fundamentals</title>
 
     <!-- Un-comment the following line to see what the document looks like with the CSS Reset applied -->
-    <!-- <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css"> -->
+      <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css">
 
     <!-- Un-comment the following line to see wht the document looks like with Normalize applied -->
-    <!-- <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css"> -->
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
 
     <!-- HINT: Only uncomment one of the above at a time and make sure to refresh your browser to see the effects! -->
 
-    <!-- Re-comment both of the above <link> tags once you've seen their effect -->
+    <!-- Re-comment both of the above <link> tags once you've seen their effect ->
 
     <!-- Create another <link> tag to import the styles.css file -->
     <!-- That file is where you will put your styles -->
+
+    <link rel = "stylesheet" type ="text/css" href ="styles.css" />
   </head>
   <body>
     <header>
